                                                      -*- indented-text -*-
+=========================================================================+
|                          DEVELOPMENT HISTORY                            |
+=========================================================================+

                  Project: ATmegaBOOT
                   Author: J. Desch <jdesch@users.berlios.de> (currently)
          Current Release: --

+=========================================================================+
|                    Copyright (c) Dipl.-Ing. J. Desch                    |
+=========================================================================+

2008/7/31 - jd

 * added configurable "quit behaviour"
 
 * minor changes to the makefiles

2008/7/29 - jd

 * made the codebase more configurable.

 * add support for RS485 transceiver Rx/Tx switching
 

+=========================================================================+
| END OF FILE                                                             |
+=========================================================================+